<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_bottom_sheet">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_bottomFilter"
        style="@style/TitleHeader"
        android:textAlignment="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottomFilter_category"
            style="@style/TitleHeader"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFilterFootbal"
                style="@style/ChipFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_soccer" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFilterBasketball"
                style="@style/ChipFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_basketball" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFilterVolleyball"
                style="@style/ChipFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_volleyball" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFilterAthletics"
                style="@style/ChipFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_athletics" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFilterFitness"
                style="@style/ChipFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_fitness" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFilterMartialArts"
                style="@style/ChipFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_martialArts" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFilterHockey"
                style="@style/ChipFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_hockey" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFilterCycling"
                style="@style/ChipFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_cycling" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFilterWaterSports"
                style="@style/ChipFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_waterSports" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFilterWinterSports"
                style="@style/ChipFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_winterSports" />

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvLevelQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            style="@style/TitleHeader"
            android:drawableRight="@drawable/ic_question"
            android:drawablePadding="5dp"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFilterEasy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ChipFilter"
                    android:text="@string/level_easy"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFilterMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ChipFilter"
                    android:text="@string/level_normal"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFilterHard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ChipFilter"
                    android:text="@string/level_hard"/>

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnClearFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/BtnLightDefault"
            android:text="@string/btn_clear"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/btnApplyFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/BtnDefault"
            android:text="@string/btn_accept"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

</LinearLayout>