<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SelectLocationActivity">

    <include
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:scrollbars="none"
        android:layout_weight="1">

        <RadioGroup
            android:id="@+id/radioGroupCities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioBtnMoscow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_moscow"
                android:layoutDirection="rtl"
                style="@style/TextMedium"
                android:textColor="@color/black"
                android:background="@drawable/shape_city_category" />

            <RadioButton
                android:id="@+id/radioBtnSaintPetersburg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_saintPetersburg"
                android:layoutDirection="rtl"
                style="@style/TextMedium"
                android:textColor="@color/black"
                android:background="@drawable/shape_city_category"
                android:layout_marginTop="10dp"/>

            <RadioButton
                android:id="@+id/radioBtnNovosibirsk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_novosibirsk"
                android:layoutDirection="rtl"
                style="@style/TextMedium"
                android:textColor="@color/black"
                android:background="@drawable/shape_city_category"
                android:layout_marginTop="10dp"/>

            <RadioButton
                android:id="@+id/radioBtnYekaterinburg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_yekaterinburg"
                android:layoutDirection="rtl"
                style="@style/TextMedium"
                android:textColor="@color/black"
                android:background="@drawable/shape_city_category"
                android:layout_marginTop="10dp"/>

            <RadioButton
                android:id="@+id/radioBtnKazan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_kazan"
                android:layoutDirection="rtl"
                style="@style/TextMedium"
                android:textColor="@color/black"
                android:background="@drawable/shape_city_category"
                android:layout_marginTop="10dp"/>

            <RadioButton
                android:id="@+id/radioBtnNizhnyNovgorod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_nizhnyNovgorod"
                android:layoutDirection="rtl"
                style="@style/TextMedium"
                android:textColor="@color/black"
                android:background="@drawable/shape_city_category"
                android:layout_marginTop="10dp"/>

            <RadioButton
                android:id="@+id/radioBtnChelyabinsk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_chelyabinsk"
                android:layoutDirection="rtl"
                style="@style/TextMedium"
                android:textColor="@color/black"
                android:background="@drawable/shape_city_category"
                android:layout_marginTop="10dp"/>

            <RadioButton
                android:id="@+id/radioBtnSaratov"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_saratov"
                android:layoutDirection="rtl"
                style="@style/TextMedium"
                android:textColor="@color/black"
                android:background="@drawable/shape_city_category"
                android:layout_marginTop="10dp"/>

            <RadioButton
                android:id="@+id/radioBtnVoronezh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_voronezh"
                android:layoutDirection="rtl"
                style="@style/TextMedium"
                android:textColor="@color/black"
                android:background="@drawable/shape_city_category"
                android:layout_marginTop="10dp"/>

            <RadioButton
                android:id="@+id/radioBtnBalashov"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_balashov"
                android:layoutDirection="rtl"
                style="@style/TextMedium"
                android:textColor="@color/black"
                android:background="@drawable/shape_city_category"
                android:layout_marginTop="10dp"/>

            <RadioButton
                android:id="@+id/radioBtnSamara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_samara"
                android:layoutDirection="rtl"
                style="@style/TextMedium"
                android:textColor="@color/black"
                android:background="@drawable/shape_city_category"
                android:layout_marginTop="10dp"/>

            <RadioButton
                android:id="@+id/radioBtnRostovNaDonu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_rostovOnDon"
                android:layoutDirection="rtl"
                style="@style/TextMedium"
                android:textColor="@color/black"
                android:background="@drawable/shape_city_category"
                android:layout_marginTop="10dp"/>

            <RadioButton
                android:id="@+id/radioBtnKrasnodar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_krasnodar"
                android:layoutDirection="rtl"
                style="@style/TextMedium"
                android:textColor="@color/black"
                android:background="@drawable/shape_city_category"
                android:layout_marginTop="10dp"/>

        </RadioGroup>

    </ScrollView>

    <Button
        android:id="@+id/btnSelectLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        style="@style/BtnDefault"
        android:text="Выбрать"/>

</LinearLayout>