<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SelectCategoryActivity">

    <include
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/radioGroupCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioBtnSoccer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_soccer"
                    android:layoutDirection="rtl"
                    style="@style/TextMedium"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_city_category"
                    android:drawableLeft="@drawable/ic_sport_soccer"
                    android:drawablePadding="10dp"/>

                <RadioButton
                    android:id="@+id/radioBtnBasketball"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_basketball"
                    android:layoutDirection="rtl"
                    style="@style/TextMedium"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_city_category"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_sport_basketball"
                    android:drawablePadding="10dp"/>

                <RadioButton
                    android:id="@+id/radioBtnVolleyball"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_volleyball"
                    android:layoutDirection="rtl"
                    style="@style/TextMedium"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_city_category"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_sport_volleyball"
                    android:drawablePadding="10dp"/>

                <RadioButton
                    android:id="@+id/radioBtnAthletics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_athletics"
                    android:layoutDirection="rtl"
                    style="@style/TextMedium"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_city_category"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_sport_treadmill"
                    android:drawablePadding="10dp"/>

                <RadioButton
                    android:id="@+id/radioBtnFitness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_fitness"
                    android:layoutDirection="rtl"
                    style="@style/TextMedium"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_city_category"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_sport_dumbbells"
                    android:drawablePadding="10dp"/>

                <RadioButton
                    android:id="@+id/radioBtnMartialArts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_martialArts"
                    android:layoutDirection="rtl"
                    style="@style/TextMedium"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_city_category"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_sport_boxing_glove"
                    android:drawablePadding="10dp"/>

                <RadioButton
                    android:id="@+id/radioBtnHockey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_hockey"
                    android:layoutDirection="rtl"
                    style="@style/TextMedium"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_city_category"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_sport_ice_hockey"
                    android:drawablePadding="10dp"/>

                <RadioButton
                    android:id="@+id/radioBtnCycling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_cycling"
                    android:layoutDirection="rtl"
                    style="@style/TextMedium"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_city_category"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_sport_bicycle"
                    android:drawablePadding="10dp"/>

                <RadioButton
                    android:id="@+id/radioBtnWaterSports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_waterSports"
                    android:layoutDirection="rtl"
                    style="@style/TextMedium"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_city_category"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_sport_swimming_ring"
                    android:drawablePadding="10dp"/>

                <RadioButton
                    android:id="@+id/radioBtnWinterSports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_winterSports"
                    android:layoutDirection="rtl"
                    style="@style/TextMedium"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_city_category"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_sport_ice_skate"
                    android:drawablePadding="10dp"/>

            </RadioGroup>

        </RadioGroup>

    </ScrollView>

    <Button
        android:id="@+id/btnSelectCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        style="@style/BtnDefault"
        android:text="@string/btn_select"/>

</LinearLayout>