<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Fragment.EditProfileFragment">

    <LinearLayout
        android:id="@+id/main"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/toolbar"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext"
                style="@style/EditText"
                android:hint="@string/textInput_email"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext"
                style="@style/EditText"
                android:hint="@string/textInput_lastName"
                android:inputType="textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext"
                style="@style/EditText"
                android:hint="@string/textInput_firstName"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSaveEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BtnDefault"
            android:text="@string/btn_accept"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"/>

    </LinearLayout>

</FrameLayout>